--- a/firstproject/src/main/resources/templates/articles/new.mustache
+++ b/firstproject/src/main/resources/templates/articles/new.mustache
@@ -1,4 +1,6 @@
 {{>layouts/header}}
+
+
 <form class = "container" action="/articles/create" method="post"> <!--action은 어디로 보낼지 method는 어떻게 보낼지-->
     <div class="mb-3">
         <label class="form-label">Title</label>
@@ -10,6 +12,8 @@
     </div>
     <button type="submit" class="btn btn-primary">submit </button>
 </form>
+
+<a href="/articles">Back</a>
 
 
 {{>layouts/footer}}
