--- a/firstproject/src/main/resources/templates/articles/show.mustache
+++ b/firstproject/src/main/resources/templates/articles/show.mustache
@@ -14,9 +14,13 @@
         <th >{{id}}</th>
         <td>{{title}}</td>
         <td>{{content}}</td>
-    </tr>
         {{/article}}
+    </tr>
+
     </tbody>
 </table>
+
+<a href="/articles/{{article.id}}/edit" class ="btn btn-primary">Edit</a>
+<a href="/articles">Go to Article List</a>
 
 {{>layouts/footer}}
