--- a/firstproject/src/main/resources/templates/layouts/header.mustache
+++ b/firstproject/src/main/resources/templates/layouts/header.mustache
@@ -41,10 +41,19 @@
                     <a class="nav-link disabled">Disabled</a>
                 </li>
             </ul>
-            <form class="d-flex">
+            <form class="d-flex" accept-charset="utf-8">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
     </div>
 </nav>
+<!-- alret msg-->
+    {{#msg}}
+
+        <div class="alert alert-primary alert-dismissible">
+            {{msg}}
+            <button type="button" class="btn_close" data-bs-dismiss="alert" aria-label ="Close"></button>
+        </div>
+
+    {{/msg}}
