--- a/firstproject/src/main/resources/templates/articles/new.mustache
+++ b/firstproject/src/main/resources/templates/articles/new.mustache
@@ -1,7 +1,7 @@
 {{>layouts/header}}
 
 
-<form class = "container" action="/articles/create" method="post"> <!--action은 어디로 보낼지 method는 어떻게 보낼지-->
+<form class = "container" action="/articles/create" method="post" accept-charset="utf-8"> <!--action은 어디로 보낼지 method는 어떻게 보낼지-->
     <div class="mb-3">
         <label class="form-label">Title</label>
         <input type="text" class="form-control" name="title">
